--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <h1>TIPOGRAFÍAS E ICONOS</h1>
     <div class="f-box">
-        <div class="s-box"><span class="icon 
-            icon-paperplane"></span></div>
+        <div class="s-box"><span class="icon icon-paperplane"></span></div>
         <div class="t-box">
             <h3>Un avión de papel</h3>
             <p>Perfecto</p>
@@ -24,8 +23,7 @@
         </div>
     </div>
     <div class="f-box">
-        <div class="s-box"><span class="icon 
-            icon-diamond"></span></div>
+        <div class="s-box"><span class="icon icon-diamond"></span></div>
         <div class="t-box">
             <h3>¿Conoces Ruby?</h3>
             <p>Lenguaje de Programación</p>
@@ -35,8 +33,7 @@
         </div>
     </div>
     <div class="f-box">
-        <div class="s-box"><span class="icon 
-            icon-heart"></span></div>
+        <div class="s-box"><span class="icon icon-heart"></span></div>
         <div class="t-box">
             <h3> I do CSS & HTML</h3>
             <p>For living</p>
@@ -45,8 +42,7 @@
         </div>
     </div>
     <div class="f-box">
-        <div class="s-box"><span class="icon 
-            icon-drink3"></span></div>
+        <div class="s-box"><span class="icon icon-drink3"></span></div>
         <div class="t-box">
             <h3>La vida comienza</h3>
             <p>después de un café</p>
