--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="assets/icons/icomoon/style.css">
+    <!--Diana agregó el icono al lado del title-->
     <link rel="shortcut icon" href="assets/images/corazon.ico">
 </head>
 <body>
